# youtube-bot

./: .flake8  .gitignore  main.py  pyproject.toml  requirements.txt
src/: audio.py  audio_util.py  discord_audio.py  discord_cog.py  discord_ui.py  discord_util.py  extract_content.py  guild_state.py  jellyfin_util.py  util.py
