[project]
name = "youtube-discord-bot"
version = "1.0-dev"
requires-python = ">=3.12"
dependencies = [
    "aiohttp",
    "discord.py",
    "python-dotenv",
    "yt-dlp[default]",
    "jellyfin-apiclient-python",
    "validators",
    "google-api-python-client",
    "pynacl",
    "linkpreview",
    "pyzmq",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "locally-disabled",
    "missing-class-docstring",
    "missing-module-docstring",
    "missing-function-docstring",
]
